# cafe-session-manager

./: .build.yml  .travis.yml  AUTHORS  HACKING  Makefile.am  NEWS  README  autogen.sh  cafe-session-manager.pot  configure.ac  index.html  makepot  output_d0e803cc5a562bec9018837718c48fe68b68f28f
.tx/: config
2023-12-13-164316-18718-1@47c9b72e6a97_xscreensaver/: index.html  output_47c9b72e6a97bb09cf8d20d801dcde4e56e24332  report-03c7c6.html  report-0bc662.html  report-16cb4d.html  report-1f1edf.html  report-1f463e.html  report-24d165.html  report-3d2264.html  report-4cf1eb.html  report-69d563.html  report-6aeb93.html  report-836628.html  report-88d32f.html  report-986be0.html  report-9b8fba.html  report-9d1d93.html  report-abdc03.html  report-b960a9.html  report-bd4432.html  report-bd4e55.html  report-cad275.html  report-cd0613.html  report-d70917.html  report-e4efad.html  report-f05804.html  report-f291f4.html
2023-12-13-164423-18720-1@3401dfbc0c89_devel/: index.html  output_3401dfbc0c89d7879d2ccb6bc5c7d093366aa084  report-03c7c6.html  report-0bc662.html  report-16cb4d.html  report-1f1edf.html  report-1f463e.html  report-24d165.html  report-3d2264.html  report-4cf1eb.html  report-69d563.html  report-6aeb93.html  report-836628.html  report-88d32f.html  report-986be0.html  report-9b8fba.html  report-9d1d93.html  report-abdc03.html  report-b960a9.html  report-bd4432.html  report-bd4e55.html  report-cad275.html  report-cd0613.html  report-d70917.html  report-e4efad.html  report-f05804.html  report-f291f4.html
2023-12-13-164427-5213-cppcheck@47c9b72e6a97_xscreensaver/: 11.html  14.html  6.html  9.html  commitmsg  index.html
2023-12-13-164533-3272-cppcheck@3401dfbc0c89_devel/: 19.html  20.html  commitmsg
2023-12-13-164741-18719-1@2dfd8c73bc75_devel/: commitmsg  index.html  report-03c7c6.html  report-0bc662.html  report-16cb4d.html  report-1f1edf.html  report-1f463e.html  report-24d165.html  report-3d2264.html  report-4cf1eb.html  report-69d563.html  report-6aeb93.html  report-836628.html  report-88d32f.html  report-986be0.html  report-9b8fba.html  report-9d1d93.html  report-abdc03.html  report-b960a9.html  report-bd4432.html  report-bd4e55.html  report-cad275.html  report-cd0613.html  report-d70917.html  report-e4efad.html  report-f05804.html  report-f291f4.html
2023-12-13-164852-3963-cppcheck@2dfd8c73bc75_devel/: 10.html  5.html  output_2dfd8c73bc754c66eabc6f2f33f77628ad3a6c0c
2023-12-13-165027-18719-1@f926e6bba529_devel/: index.html  output_f926e6bba52982ea3a4bc53e5c84b154892024ae  report-03c7c6.html  report-0bc662.html  report-16cb4d.html  report-1f1edf.html  report-1f463e.html  report-24d165.html  report-3d2264.html  report-4cf1eb.html  report-69d563.html  report-6aeb93.html  report-836628.html  report-88d32f.html  report-986be0.html  report-9b8fba.html  report-9d1d93.html  report-abdc03.html  report-b960a9.html  report-bd4432.html  report-bd4e55.html  report-cad275.html  report-cd0613.html  report-d70917.html  report-e4efad.html  report-f05804.html  report-f291f4.html
2023-12-13-165137-6555-cppcheck@f926e6bba529_devel/: 2.html
2023-12-13-165301-18719-1@6bbd5bbe8660_devel/: index.html  report-03c7c6.html  report-0bc662.html  report-16cb4d.html  report-1f1edf.html  report-1f463e.html  report-24d165.html  report-3d2264.html  report-4cf1eb.html  report-69d563.html  report-6aeb93.html  report-836628.html  report-88d32f.html  report-986be0.html  report-9b8fba.html  report-9d1d93.html  report-abdc03.html  report-b960a9.html  report-bd4432.html  report-bd4e55.html  report-cad275.html  report-cd0613.html  report-d70917.html  report-e4efad.html  report-f05804.html  report-f291f4.html
2023-12-13-165411-7188-cppcheck@6bbd5bbe8660_devel/: 21.html  22.html  27.html  7.html  9.html  output_6bbd5bbe86608e7343eaeaca44d5ffe6b2d53cbe
2023-12-13-165631-18718-1@814258e137db_devel/: index.html  report-03c7c6.html  report-0bc662.html  report-16cb4d.html  report-1f1edf.html  report-1f463e.html  report-24d165.html  report-3d2264.html  report-4cf1eb.html  report-69d563.html  report-6aeb93.html  report-836628.html  report-88d32f.html  report-986be0.html  report-9b8fba.html  report-9d1d93.html  report-abdc03.html  report-b960a9.html  report-bd4432.html  report-bd4e55.html  report-cad275.html  report-cd0613.html  report-d70917.html  report-e4efad.html  report-f05804.html  report-f291f4.html
2023-12-13-165743-5583-cppcheck@814258e137db_devel/: 13.html  14.html  3.html  output_814258e137db69549e52f3e6b11b7b91c9e4c794
2023-12-13-172704-18720-1@7018ef0d62ac_devel/: index.html  report-03c7c6.html  report-0bc662.html  (+23 more)
cafe-session/: Makefile.am  README  cdm-log.c  cdm-log.h  cdm-signal-handler.c  cdm-signal-handler.h  cdm.c  cdm.h  csm-app.c  csm-app.h  csm-autostart-app.c  csm-autostart-app.h  csm-client.c  csm-client.h  csm-consolekit.c  csm-consolekit.h  csm-dbus-client.c  csm-dbus-client.h  csm-inhibit-dialog.c  csm-inhibit-dialog.h  csm-inhibitor.c  csm-inhibitor.h  csm-logout-dialog.c  csm-logout-dialog.h  csm-manager.c  csm-manager.h  csm-presence.c  csm-presence.h  csm-session-save.c  csm-session-save.h  csm-store.c  csm-store.h  csm-systemd.c  csm-systemd.h  csm-util.c  csm-util.h  csm-xsmp-client.c  csm-xsmp-client.h  csm-xsmp-server.c  csm-xsmp-server.h  (+21 more)
capplet/: Makefile.am  csm-app-dialog.c  csm-app-dialog.h  csm-properties-dialog.c  csm-properties-dialog.h  gsm-app-dialog.c  gsm-app-dialog.h  gsm-properties-dialog.c  gsm-properties-dialog.h  gsp-app-manager.c  gsp-app.c  gsp-keyfile.c  gsp-keyfile.h  main.c
data/: Makefile.am  cafe-session-properties.desktop.in  cafe-wm  cafe-wm.desktop.in  cafe.desktop.in  gsm-inhibit-dialog.ui  org.cafe.session.gschema.xml.in  session-properties.ui
data/icons/: Makefile.am
doc/dbus/: Makefile.am  cafe-session.xml.in
doc/man/: Makefile.am  cafe-session-inhibit.xml  cafe-session-properties.1  cafe-session-save.1  cafe-session.1  cafe-wm.1
tools/: Makefile.am  cafe-session-check-accelerated-gl-helper.c  cafe-session-check-accelerated-gles-helper.c  cafe-session-check-accelerated.c  cafe-session-inhibit.c  cafe-session-save.c
(+1387 files in other folders)
